--- a/app/design/frontend/rwd/default/template/page/html/header.phtml
+++ b/app/design/frontend/rwd/default/template/page/html/header.phtml
@@ -24,10 +24,9 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 /**
- * @var Mage_Page_Block_Html_Header $this
+ * @var Mage_Page_Block_Html_Header $this Jp
  */
 ?>
-
 <div class="header-language-background">
     <div class="header-language-container">
         <div class="store-language-container">
